# python-project-lvl1

first_python_project/: pyproject.toml
first_python_project/brain_games/scripts/: brain_games.py
first_python_project/vluyb_brain_games.egg-info/: PKG-INFO  SOURCES.txt
